# antz

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-rpi4.yml
ANT-SDK_Mac.3.5/: CMakeLists.txt  bin.txt  build.txt  crc_calc.txt  dsithread_mutexinit.txt  file_structure.txt
ANT-SDK_Mac.3.5/DEMO_LIB/: demo.cpp
ant_discovery/: CMakeLists.txt
ant_discovery/include/: discovery.hpp
ant_discovery/src/: ant_constants.h  ant_device.h  ant_profiles.h  asset_tracker_discovery.cpp  discovery.cpp  hrm_discovery.cpp  main.cpp  main_new.cpp  profile_discovery.h
apps/ant_discovery/: CMakeLists.txt  README.md
apps/ant_discovery/src/: ant_device.h  ant_profiles.h  asset_tracker_discovery.cpp  asset_tracker_discovery.h  config.h  discovery.cpp  discovery.hpp  discovery_machine.cpp  discovery_machine.h  hrm_discovery.cpp  hrm_discovery.h  logging.h  main.cpp  mqtt.h  profile_discovery.h  usb_checker.cpp
docs/: Architecture.md  cxx-requirements.md  nrf5_platform.md  usb_debug.md
libs/antz_bridge/: CMakeLists.txt
libs/antz_bridge/src/: ant_bridge.cpp  ant_bridge.h
libs/antz_core/: CMakeLists.txt
libs/antz_core/src/: antz_channel.h  antz_context.h  antz_core_logging.h
libs/antz_core/src/data/: antz_bytes.h  antz_data.cpp  antz_data.h
libs/antz_core/src/error/: antz_error.cpp  antz_error.h
libs/antz_core/src/event/: antz_event.cpp  antz_event.h
libs/antz_core/src/logger/: antz_logger.cpp  antz_logger.h  antz_xmacro_logger.h
libs/antz_core/src/page/: antz_page.cpp  antz_page.h
libs/antz_core/src/profiles/: antz_profile.cpp  antz_profile.h
libs/antz_core/src/profiles/hrm/: hrm_decoder.cpp  hrm_decoder.h  hrm_pages.h
libs/antz_platform/: CMakeLists.txt
libs/antz_platform/darwin/: CMakeLists.txt
libs/antz_platform/mac/: CMakeLists.txt
libs/antz_platform/src/: antz_hal.h  antz_platform.cpp  antz_platform.h  antz_platform_logging.h
libs/antz_platform_darwin/: CMakeLists.txt
libs/antz_platform_darwin/src/: darwin.cpp  darwin.h
libs/antz_platform_linux/: CMakeLists.txt
packaging/linux/conf/: 99-antz.rules  antz.service
packaging/linux/debian/: postinst
scripts/: build-rpi4.sh  configure-rpi4.sh
sdks/ANT-SDK_Linux_3.8.200_BETA/: CMakeLists.txt
sdks/ANT-SDK_Linux_3.8.200_BETA/ANT_LIB/software/USB/device_handles/: usb_device_handle_libusb_mac.cpp
sdks/ANT-SDK_Linux_3.8.200_BETA/ANT_LIB/software/system/: macros.h
sdks/ANT-SDK_Linux_3.8.200_BETA/DEMO_DLL/: demo.cpp
sdks/ANT-SDK_Mac.3.5/: CMakeLists.txt  README.md
sdks/ANT-SDK_Mac.3.5/ANT_DLL/: ant.cpp
sdks/ANT-SDK_Mac.3.5/ANT_LIB/inc/: antdefines.h
sdks/ANT-SDK_Mac.3.5/ANT_LIB/software/ANTFS/: antfs_client_channel.cpp  antfs_client_interface.hpp  antfs_host_channel.cpp
sdks/ANT-SDK_Mac.3.5/ANT_LIB/software/USB/device_handles/: usb_device_handle_si_iokit.cpp
sdks/ANT-SDK_Mac.3.5/ANT_LIB/software/USB/iokit_driver/: iokit_types.hpp
sdks/ANT-SDK_Mac.3.5/ANT_LIB/software/serial/: dsi_framer_ant.cpp  dsi_framer_ant.hpp
sdks/ANT-SDK_Mac.3.5/ANT_LIB/software/serial/device_management/: dsi_ant_device.cpp  dsi_ant_device_polling.cpp
sdks/ANT-SDK_Mac.3.5/DEMO_DLL/: demo.cpp
sdks/ANT-SDK_Mac.3.5/DEMO_LIB/: demo.cpp
